name: memoria
version: 0.0.1
cabal-version: >= 1.18
build-type: Simple


library
    default-language: Haskell2010
    build-depends: HDBC >= 2.4
                 , HDBC-postgresql >= 2.3.2.6
                 , MonadRandom >= 0.5
                 , aeson >= 1.4
                 , base >= 0.0.1
                 , binary >= 0.8
                 , blaze-html >= 0.9.1.1
                 , blaze-markup >= 0.8.2.2
                 , bytestring >= 0.10
                 , connection >= 0.3
                 , containers >= 0.6.0.1
                 , cookie >= 0.4.5
                 , data-default-class >= 0.1
                 , formatting >= 6.3.7
                 , http-types >= 0.12.3
                 , monad-control >= 1.0.2.3
                 , mime-mail >= 0.5
                 , mtl >= 2.2.2
                 , network >= 3
                 , random >= 1.1
                 , raw-strings-qq >= 1
                 , resource-pool >= 0.2
                 , scientific >= 0.3.6.2
                 , scotty >= 0.11.5
                 , scotty-cookie >= 0.1
                 , smtp-mail >= 0.2
                 , suspend >= 0.2
                 , text >= 1.2.3
                 , time >= 1.6
                 , timers >= 0.2
                 , tomland >= 1
                 , transformers >= 0.5
                 , transformers-base >= 0.4
                 , uuid >= 1.3.13
                 , wai >= 3.2.2.1
                 , warp >= 3.3.4
    exposed-modules: Memoria
    ghc-options: -O -Wall
    hs-source-dirs: src
    other-modules: Memoria.Common
                 , Memoria.Conf
                 , Memoria.Cookies
                 , Memoria.Db
                 , Memoria.Page.Auth
                 , Memoria.Page.CreateAccount
                 , Memoria.Page.CreateQuestion
                 , Memoria.Page.CreateQuestionSet
                 , Memoria.Page.EditAnswer
                 , Memoria.Page.Export
                 , Memoria.Page.Index
                 , Memoria.Page.Login
                 , Memoria.Page.Logout
                 , Memoria.Page.QuestionAnswers
                 , Memoria.Page.QuestionSet
                 , Memoria.Page.Settings
                 , Memoria.Page.Test
                 , Memoria.Sessions
                 , Memoria.Timers
                 , Memoria.View.Base
                 , Memoria.View.CreateQuestion
                 , Memoria.View.CreateQuestionSet
                 , Memoria.View.EditAnswer
                 , Memoria.View.Export
                 , Memoria.View.Index
                 , Memoria.View.Login
                 , Memoria.View.QuestionAnswers
                 , Memoria.View.QuestionSet
                 , Memoria.View.Settings
                 , Memoria.View.Test
                 , Memoria.View.Unauthenticated


executable memoria
    default-language: Haskell2010
    main-is: main.hs
    hs-source-dirs: app
    build-depends: base >= 0.0.1
                 , data-default-class >= 0.1
                 , formatting >= 6.3.7
                 , memoria >= 0.0.1
    ghc-options: -O -Wall -rtsopts -threaded

